--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
+.container {
+  width: 100%;
+  max-width: 1100px;
+  margin:  0 auto;
+  padding: 0 1.5rem;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.6;
@@ -95,7 +102,7 @@ footer {
   form button {
     width: 100%;
   }
-}
+}  
 
 form {
   max-width: 400px;
