--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,16 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Inter', Helvetica, sans-serif;
   line-height: 1.6;
   color: #333;
+}
+h1, h2, h3 {
+  font-weight: 600;
+}
+
+p {
+  font-weight: 400;
 }
 
 header {
